--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/madmonk13/channelZero#readme",
   "dependencies": {
+    "axios": "^1.12.2",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
